fix: fixing header spacing

--- a/style.css
+++ b/style.css
@@ -27,39 +27,37 @@
     font-family: 'Now', sans-serif;
 }
 
-html{
-    scroll-behavior: smooth;
-}
-
 body {
     height: 100%;
     overflow-x: hidden;
     background: fixed url(assets/fundo-imagem.png);
 }
 
-body::-webkit-scrollbar {
+main::-webkit-scrollbar {
     width: 8px;
     height: 10px;
 }
 
-body::-webkit-scrollbar-thumb {
+main::-webkit-scrollbar-thumb {
     background: var(--intermediate-contrast);
     border-radius: 10px;
 }
 
-body::-webkit-scrollbar-track {
-    background: none;
+.main {
+    height: calc(100vh - 70px);
+    overflow-y: auto;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 .main > section{
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 70px);
 }
 
 .site-section{
     height: 100vh;
     width: 100vw;
-    padding-top: 80px;
 
     display: flex;
     align-items: center;
@@ -68,8 +66,6 @@ body::-webkit-scrollbar-track {
 }
 
 .header{
-    position: fixed;
-    top: 0;
     height: 70px;
     width: 100vw;
     display: flex;
